Always show scrollbar to avoid jumping of the page when navigating

--- a/_themes/buster/static/buster.css
+++ b/_themes/buster/static/buster.css
@@ -1,6 +1,9 @@
 @import url("basic.css");
 
 /* Layout */
+html {
+    overflow-y: scroll;
+}
 html,
 body {
     margin: 0;
